# treat-dispenser

./: Cargo.toml  readme.md  rust-toolchain.toml
.cargo/: config.toml.example
src/: main.rs
