[package]
name = "tweats"
version = "0.1.0"
authors = ["Keith Sachs <keith.t.sachs@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = ["integrated-timers", "nightly"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "log", "dns"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = "0.3.2"
embedded-can = "0.4.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-svc = { version = "0.28.0", default-features = false}
embedded-tls = { version = "0.17.0", default-features = false }
esp-backtrace = { version = "0.13.0", features = ["esp32c6", "exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.19.0", features = [ "esp32c6", "async" ] }
esp-hal-embassy = {version = "0.2.0", features = ["esp32c6"]}
esp-println = { version = "0.10.0", features = ["esp32c6", "log", "defmt-espflash"] }
esp-wifi = { version = "0.7.1", features = ["esp32c6", "async", "embassy-net", "wifi"]}
heapless = {version = "0.8.0", features = ["serde"]}
log = "0.4.21"
nb = "1.1.0"
nourl = { version = "0.1.1", features = ["defmt"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
reqwless = {version = "0.12.1", features= ["alloc", "log"]}
rust-mqtt = { version = "0.3.0", default-features = false }
serde = { version  = "1.0.207", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
static_cell = { version = "2.1.0", features = ["nightly"]}
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
    incremental = false
    lto = 'fat'
opt-level = 's'
overflow-checks = false
